# cyber-pulse

./: .dockerignore  .env.example  .gitignore  .version  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml  sources-export.opml  sources.yaml  test-import.opml
.claude/: settings.json
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 56c2ab9b309c_fix_all_enum_values.py  6122f6cce2d2_add_job_trigger_field.py  6664e7b0fa8a_fix_api_client_status_enum.py  66ade19bda6e_add_api_client_expires_at.py  7f32ffbc0eeb_add_pending_full_fetch_status.py  7f3c8e2a9b1d_add_source_scheduling_columns.py  810a2d7751de_add_full_fetch_fields.py  86249cfcd39c_data_model_refactor.py  8a4b5c6d7e8f_create_jobs_table.py  a1b2c3d4e5f6_remove_noise_ratio_from_items.py  b88fa801bab2_add_source_failure_tracking_fields.py  e20971f2d7c0_remove_language_column.py  f7a1067318b7_initial_schema.py  fbbce8790325_add_settings_table.py
deploy/: docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
deploy/backup/: create-backup.sh  restore-backup.sh
deploy/init/: check-deps.sh  generate-env.sh
deploy/upgrade/: check-update.sh  create-snapshot.sh  restore-snapshot.sh
docs/: 2026-03-20-project-summary-report.md  admin-api-reference.md  api-guide.md  api-reference.md  backup-restore.md  business-api-reference.md  cli-usage-manual.md  deployment-guide.md  developer-deployment-guide.md  environment-variables.md  local-deployment-guide.md  monitoring.md  ops-deployment-guide.md  quickstart.md  security-guide.md  source-config-examples.md  troubleshooting.md  upgrade-guide.md  verification-guide.md
docs/superpowers/plans/: 2026-03-18-cyber-pulse-implementation.md  2026-03-19-cyber-pulse-phase2-implementation.md  2026-03-19-cyber-pulse-phase3-integration.md  2026-03-20-diagnose-log-enhancements.md  2026-03-20-verification-system.md  2026-03-21-deployment-plan-1-install.md  2026-03-21-deployment-plan-2-framework.md  2026-03-21-deployment-plan-3-upgrade.md  2026-03-21-deployment-plan-4-backup.md  2026-03-21-deployment-plan-5-multi-env.md  2026-03-21-deployment-plan-6-cli-import-export.md  2026-03-21-verification-pr19-features.md  2026-03-25-api-implementation.md  2026-03-25-api-unicode-encoding.md  2026-03-25-review-report.md  2026-03-25-rss-content-quality-fix.md  2026-03-25-rss-ingestion-error-fix.md  2026-03-26-data-model-refactor.md  2026-03-26-deployment-optimization-phase1.md  2026-03-26-source-api-completion.md  2026-03-26-upgrade-mechanism.md  2026-03-27-type-checking-fix.md  2026-03-28-full-content-fetch-mixed-strategy.md  2026-03-29-dual-mode-deployment-upgrade.md  2026-03-29-issue-63-fix-implementation.md  2026-03-29-issue-70-69-implementation.md  2026-03-29-sqlalchemy-mapped-migration-implementation.md  2026-03-30-api-reference-implementation.md  2026-03-30-api-sh-fix.md  2026-03-31-issue-91-92-fix-plan.md  2026-04-01-docker-compose-project-isolation.md  2026-04-01-incremental-sync.md  2026-04-02-fix-full-fetch-status.md  2026-04-05-youtube-connector.md
docs/superpowers/specs/: 2026-03-18-cyber-pulse-design-diff.md  2026-03-18-cyber-pulse-design-qa.md  2026-03-18-cyber-pulse-design.md  (+24 more)
docs/verification-reports/: 20260321-145303-verification.md  20260321-150753-verification.md
examples/: sources-example.yaml
issues/: 2026-03-24-api-fields-mismatch.md  2026-03-24-api-test-report.md  2026-03-24-api-unicode-escape.md  2026-03-24-cli-json-unicode-escape.md  2026-03-24-content-incomplete.md  2026-03-24-content-quality-report.md  2026-03-24-rss-content-fetch-architecture.md  2026-03-24-rss-no-content.md  2026-03-24-rss-source-accessibility.md  2026-03-24-source-health-api.md  2026-03-24-tui-display-bug.md  2026-03-24-tui-test-report.md  2026-03-24-verify-script-extension.md  2026-03-24-worker-errors.md  test-feeds.md  test-results-analysis.md
issues/data/: content_quality_report.csv  rss_feed_test_results.csv
scripts/: api.sh  build-deploy-package.sh  cyber-pulse.sh  test_e2e_rss_sources.py  verify.sh
src/cyberpulse/: __init__.py  config.py  database.py
tests/: conftest.py  test_admin_reset.sh  test_api_auth.py  test_api_sh.sh  test_build_deploy_package.sh  test_cli_removal.py  test_generate_env.sh  test_install_user_types.sh  test_models.py  test_startup.py  test_verification.py  test_version.py
tests/fixtures/: __init__.py  real_test_urls.py
tests/test_api/: __init__.py  test_admin_clients.py  test_admin_diagnose.py  test_admin_jobs.py  test_admin_logs.py  test_admin_sources.py  test_auth.py  test_client_api.py  test_content_api.py  test_cursor.py  test_health_api.py  test_items.py  test_source_api.py  test_unicode_encoding.py
tests/test_cli/: __init__.py  test_cli_main.py  test_client_commands.py  test_config_commands.py  test_content_commands.py  test_diagnose_commands.py  test_job_commands.py  test_log_commands.py  test_source_commands.py  test_source_import_export.py  test_source_io.py
tests/test_integration/: test_e2e.py  test_full_content_fetch_real.py  test_youtube_connector.py
tests/test_models/: test_job.py  test_settings.py  test_source_fields.py
tests/test_scheduler/: __init__.py  test_integration.py  test_scheduler.py
tests/test_services/: test_api_connector.py  test_connector_factory.py  test_content_quality.py  test_content_service.py  test_full_content_fetch.py  test_item_service.py  test_jina_client.py  test_job_lifecycle_service.py  test_media_connector.py  test_normalization_service.py  test_quality_gate_service.py  test_rss_connector.py  test_rss_connector_enhanced.py  test_rss_discovery.py  test_source_quality_validator.py  test_source_score_service.py  test_source_service.py  test_title_parser.py  test_transcript_extractor.py  test_web_connector.py  test_youtube_connector.py
tests/test_tasks/: __init__.py  test_full_content_tasks.py  test_import_tasks.py  test_ingestion_enhanced.py  test_ingestion_tasks.py  test_normalization_tasks.py  test_quality_tasks.py  test_worker.py
(+92 files in other folders)
