[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-pulse"
version = "0.1.0"
description = "Cyber Pulse - Strategic Intelligence Collection System"
readme = "README.md"
authors = [{name = "老罗", email = "luoweirong@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.7",
    "dramatiq>=1.14.1",
    "redis>=5.0.1",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.2",
    "markdownify>=0.11.6",
    "feedparser>=6.0.10",
    "youtube-transcript-api>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.10.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/your-username/cyber-pulse"
Repository = "https://github.com/your-username/cyber-pulse"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyber_pulse*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88