[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-pulse"
version = "1.8.3"
description = "Cyber Pulse - Strategic Intelligence Collection System"
readme = "README.md"
authors = [{name = "老罗", email = "luoweirong@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "dramatiq[redis]>=1.14.0",
    "apscheduler>=3.10.0",
    "httpx>=0.26.0",
    "feedparser>=6.0.0",
    "feedfinder2>=0.0.4",
    "trafilatura>=1.6.0",
    "google-api-python-client>=2.100.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "beautifulsoup4>=4.14.3",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.0.0",
    "ruff>=0.2.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
    "faker>=21.0.0",
    "factory-boy>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/cyberstrat-forge/cyber-pulse"
Repository = "https://github.com/cyberstrat-forge/cyber-pulse"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cyberpulse*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
# 环境变量由 tests/conftest.py 动态读取 deploy/.env

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Alembic migration files use module-level variables that appear unused
"alembic/versions/*.py" = ["F841"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
